--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,8 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="film_poster">film poster</string>
+    <string name="film_name_sample">film name</string>
+    <string name="film_desc_sample">film desc</string>
+    <string name="film_desc">%1$s (%2$s)</string>
 </resources>
