--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,6 @@
     <string name="film_name_sample">film name</string>
     <string name="film_desc_sample">film desc</string>
     <string name="film_desc">%1$s (%2$s)</string>
+    <string name="no_internet_message">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>
+    <string name="try_again">Повторить</string>
 </resources>
