--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
     <string name="top_fragment_label">Популярные</string>
-    <string name="film_details_fragment_label"></string>
+    <string name="film_details_fragment_label">{name}</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
@@ -49,4 +49,6 @@
     <string name="film_desc">%1$s (%2$s)</string>
     <string name="no_internet_message">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>
     <string name="try_again">Повторить</string>
+    <string name="genres"><b>Жанры: </b> %1$s</string>
+    <string name="countries"><b>Страны: </b> %1$s</string>
 </resources>
