--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="try_again">Повторить</string>
     <string name="genres"><![CDATA[<b>Жанры: </b>%1$s]]></string>
     <string name="countries"><![CDATA[<b>Страны: </b>%1$s]]></string>
+    <string name="search">Поиск</string>
 </resources>
